--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -51,7 +51,7 @@
                             <ul class="list-disc pl-5 text-sm">
                                 <li>CHEM-101: Inorganic Chemistry</li>
                                 <li>CHEM-102: Organic Chemistry</li>
-                                <li>CHEM-103: Physical Chemistry</li>
+                                <li>CHEM-103: Quantum Chemistry</li>
                                 <li>CHEM-104: Mathematics for Chemistry</li>
                                 <li>CHEM-105: Computer Applications</li>
                             </ul>
@@ -66,8 +66,8 @@
                         <div class="space-y-2">
                             <ul class="list-disc pl-5 text-sm">
                                 <li>CHEM-201: Advanced Inorganic</li>
-                                <li>CHEM-202: Advanced Organic</li>
-                                <li>CHEM-203: Advanced Physical</li>
+                                <li>CHEM-202: Spectroscopy</li>
+                                <li>CHEM-203: Physical Chemistry</li>
                                 <li>CHEM-204: Analytical Chemistry</li>
                                 <li>CHEM-205: Spectroscopy</li>
                             </ul>
@@ -81,9 +81,9 @@
                         </h3>
                         <div class="space-y-2">
                             <ul class="list-disc pl-5 text-sm">
-                                <li>CHEM-301: Organometallic Chemistry</li>
-                                <li>CHEM-302: Polymer Chemistry</li>
-                                <li>CHEM-303: Quantum Chemistry</li>
+                                <li>CHEM-301: Organic Synthesis</li>
+                                <li>CHEM-302: Medicinal Chemistry</li>
+                                <li>CHEM-303: Nanomaterials</li>
                                 <li>CHEM-304: Elective Papers</li>
                                 <li>CHEM-305: Research Methodology</li>
                             </ul>
@@ -126,7 +126,7 @@
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-101:
                             Inorganic Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -151,7 +151,7 @@
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-102:
                             Organic Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -175,7 +175,7 @@
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-103:
                             Physical Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -199,7 +199,7 @@
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-104:
                             Mathematics for Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -223,7 +223,7 @@
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-105:
                             Application of Computer in Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -247,7 +247,7 @@
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-blue-700 border-l-4 border-blue-700 pl-3">Complete
                             Semester 1 Package</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+ <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                             <div class="bg-white border-2 border-blue-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">All Subjects Combined (2024)</h5>
                                 <div class="flex justify-between items-center">
@@ -436,16 +436,32 @@
                     <div>
                         <h3 class="font-semibold mb-3 text-blue-700">Exam Pattern</h3>
                         <ul class="space-y-2 text-sm text-gray-700">
-                            <li>• Each paper: 70 marks (Theory) + 30 marks (Internal Assessment)</li>
+                            <li>• Theory Papers: 70 marks (External) + 30 marks (Internal) = 100 marks each</li>
                             <li>• Duration: 3 hours for each theory paper</li>
-                            <li>• Practical exams: 50 marks each semester</li>
-                            <li>• Viva-voce: 20 marks each semester</li>
+                            <li>• Practical Exams: 50 marks each semester</li>
+                            <li>• Viva-voce: Conducted during practical exams</li>
+ <li>• Total Marks per Semester: 500 (approx, includes theory and practicals)</li>
+ <li>• Minimum Pass Marks: 40% in each paper (including internal and external assessment combined)</li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="font-semibold mb-3 text-blue-700">Important Topics</h3>
                         <ul class="space-y-2 text-sm text-gray-700">
-                            <li>• Inorganic: Crystal field theory, Metal complexes</li>
+                            <li>• Semester 1:</li>
+                            <li>&nbsp;&nbsp;• Inorganic: Bonding theories, Coordination Chemistry, Solid State</li>
+                            <li>&nbsp;&nbsp;• Organic: Stereochemistry, Reaction Mechanisms, Spectroscopy (basic)</li>
+                            <li>&nbsp;&nbsp;• Physical: Thermodynamics, Chemical Kinetics, Electrochemistry</li>
+                            <li>&nbsp;&nbsp;• Maths/Computers: Relevant mathematical tools, Basic programming</li>
+                            <li>• Semester 2:</li>
+                            <li>&nbsp;&nbsp;• Inorganic: Concepts of Acids/Bases, Redox Reactions, Bioinorganic</li>
+                            <li>&nbsp;&nbsp;• Organic: Pericyclic Reactions, Photochemistry, Name Reactions</li>
+                            <li>&nbsp;&nbsp;• Physical: Quantum Chemistry, Statistical Thermodynamics, Surface Chemistry</li>
+                            <li>• Semester 3:</li>
+                            <li>&nbsp;&nbsp;• Spectroscopy (Advanced): NMR, Mass, IR</li>
+                            <li>&nbsp;&nbsp;• Specializations: Analytical, Environmental, Industrial, etc.</li>
+                            <li>• Semester 4:</li>
+                            <li>&nbsp;&nbsp;• Research Project/Dissertation, Advanced Topics</li>
+                            <li>• Overall: Spectroscopy, Quantum Mechanics, Reaction Mechanisms, Coordination Chemistry</li>
                             <li>• Organic: Stereochemistry, Reaction mechanisms</li>
                             <li>• Physical: Quantum mechanics, Statistical mechanics</li>
                             <li>• Mathematics: Calculus, Linear algebra applications</li>
