--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -32,7 +32,7 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="mb-8 text-center">
                 <h1 class="text-3xl font-bold text-blue-800 mb-2">MSc Chemistry HPU</h1>
-                <p class="text-lg text-gray-700">Himachal Pradesh University Previous Year Question Papers</p>
+                <p class="text-lg text-gray-700">Himachal Pradesh University Previous Year Question Papers Chemistry</p>
             </div>
 
             <!-- Course Information -->
