--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -28,11 +28,11 @@
     </div>
 
     <!-- Main Content -->
-    <section class="py-8 bg-white">
+    <section class="py-8 bg-white max-w-7xl mx-auto">
         <div class="max-w-6xl mx-auto px-4">
             <div class="mb-8 text-center">
                 <h1 class="text-3xl font-bold text-blue-800 mb-2">MSc Chemistry HPU</h1>
-                <p class="text-lg text-gray-700">Himachal Pradesh University Previous Year Question Papers Chemistry</p>
+                <p class="text-lg text-gray-700">Himachal Pradesh University Previous Year Question Papers</p>
             </div>
 
             <!-- Course Information -->
@@ -95,7 +95,7 @@
                     <!-- CHEM-101 Inorganic Chemistry -->
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-101: Inorganic Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -118,7 +118,7 @@
                     <!-- CHEM-102 Organic Chemistry -->
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-102: Organic Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -141,7 +141,7 @@
                     <!-- CHEM-103 Physical Chemistry -->
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-103: Physical Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -164,7 +164,7 @@
                     <!-- CHEM-104 Mathematics for Chemistry -->
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-104: Mathematics for Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -187,7 +187,7 @@
                     <!-- CHEM-105 Computer Applications -->
                     <div class="mb-6">
                         <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-105: Computer Applications</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
                                 <h5 class="font-medium mb-2">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
@@ -213,7 +213,7 @@
                     <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Semester 2 - MSc Chemistry HPU
                         <span class="bg-amber-100 text-amber-800 text-xs px-2 py-1 rounded-full">Coming Soon</span>
                     </h3>
-                    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                         <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition opacity-75">
                             <h4 class="font-medium mb-2">CHEM-201: Advanced Inorganic</h4>
                             <div class="flex justify-between items-center">
@@ -249,7 +249,7 @@
                     <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Semester 3 - MSc Chemistry HPU
                         <span class="bg-amber-100 text-amber-800 text-xs px-2 py-1 rounded-full">Coming Soon</span>
                     </h3>
-                    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                         <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition opacity-75">
                             <h4 class="font-medium mb-2">CHEM-301: Organic Synthesis</h4>
                             <div class="flex justify-between items-center">
