--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -87,7 +87,7 @@
                 <h2 class="text-2xl font-bold text-blue-800 mb-6 border-b pb-2">Previous Year Papers</h2>
 
                 <!-- Semester 1 Papers -->
-                <div class="mb-8">
+                <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
                     <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Semester 1 - MSc Chemistry HPU
                         <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">All Available</span>
                     </h3>
