--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -87,123 +87,67 @@
                 <h2 class="text-2xl font-bold text-blue-800 mb-6 border-b pb-2">Previous Year Papers</h2>
 
                 <!-- Semester 1 Papers -->
-                <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div class="mb-8">
                     <h3 class="text-xl font-semibold mb-4 bg-gray-100 p-2 rounded">Semester 1 - MSc Chemistry HPU
                         <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">All Available</span>
                     </h3>
 
+                    <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                     <!-- CHEM-101 Inorganic Chemistry -->
-                    <div class="mb-6">
-                        <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-101: Inorganic Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                                <h5 class="font-medium mb-2">2024 Question Paper</h5>
+                            <h4 class="font-medium mb-2">CHEM-101: Inorganic Chemistry</h4>
+                            <h5 class="text-sm text-gray-600 mb-3">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
-                                    <span class="text-sm text-gray-600">December 2024</span>
+                                <span class="text-xs text-gray-500">December 2024</span>
                                     <div class="space-x-2">
                                         <a href="https://archive.org/details/msc-sem-1-inorganic-chemistry-cmem-01" target="_blank"
-                                            class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
-                                            View Online
+                                        class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
+                                        View
                                         </a>
                                         <a href="https://archive.org/download/msc-sem-1-inorganic-chemistry-cmem-01/MSC%20sem%201%20%28Inorganic%20Chemistry%29%20CMEM%20-%2001%20.pdf"
-                                            class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                                        class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
                                             Download
                                         </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- CHEM-102 Organic Chemistry -->
-                    <div class="mb-6">
-                        <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-102: Organic Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                                <h5 class="font-medium mb-2">2024 Question Paper</h5>
+                            <h4 class="font-medium mb-2">CHEM-102: Organic Chemistry</h4>
+                            <h5 class="text-sm text-gray-600 mb-3">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
-                                    <span class="text-sm text-gray-600">December 2024</span>
+                                <span class="text-xs text-gray-500">December 2024</span>
                                     <div class="space-x-2">
-                                        <a href="#" target="_blank"
-                                            class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
-                                            View Online
+                                    <a href="#" target="_blank" class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
+                                        View
                                         </a>
-                                        <a href="#"
-                                            class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                                    <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
                                             Download
                                         </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- CHEM-103 Physical Chemistry -->
-                    <div class="mb-6">
-                        <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-103: Physical Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
                             <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                                <h5 class="font-medium mb-2">2024 Question Paper</h5>
+                            <h4 class="font-medium mb-2">CHEM-103: Physical Chemistry</h4>
+                            <h5 class="text-sm text-gray-600 mb-3">2024 Question Paper</h5>
                                 <div class="flex justify-between items-center">
-                                    <span class="text-sm text-gray-600">December 2024</span>
+                                <span class="text-xs text-gray-500">December 2024</span>
                                     <div class="space-x-2">
-                                        <a href="#" target="_blank"
-                                            class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
-                                            View Online
+                                    <a href="#" target="_blank" class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
+                                        View
                                         </a>
-                                        <a href="#"
-                                            class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
+                                    <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
                                             Download
                                         </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <!-- CHEM-104 Mathematics for Chemistry -->
-                    <div class="mb-6">
-                        <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-104: Mathematics for Chemistry</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
-                            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                                <h5 class="font-medium mb-2">2024 Question Paper</h5>
-                                <div class="flex justify-between items-center">
-                                    <span class="text-sm text-gray-600">December 2024</span>
-                                    <div class="space-x-2">
-                                        <a href="#" target="_blank"
-                                            class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
-                                            View Online
-                                        </a>
-                                        <a href="#"
-                                            class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
-                                            Download
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        <!-- Add CHEM-104 and CHEM-105 here with the same structure -->
 
-                    <!-- CHEM-105 Computer Applications -->
-                    <div class="mb-6">
-                        <h4 class="text-lg font-medium mb-3 text-gray-700 border-l-4 border-blue-500 pl-3">CHEM-105: Computer Applications</h4>
-                        <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
-                            <div class="bg-white border border-gray-200 rounded-lg p-4 hover:shadow-md transition">
-                                <h5 class="font-medium mb-2">2024 Question Paper</h5>
-                                <div class="flex justify-between items-center">
-                                    <span class="text-sm text-gray-600">December 2024</span>
-                                    <div class="space-x-2">
-                                        <a href="#" target="_blank"
-                                            class="bg-green-600 hover:bg-green-700 text-white text-sm px-3 py-1 rounded">
-                                            View Online
-                                        </a>
-                                        <a href="#"
-                                            class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-3 py-1 rounded">
-                                            Download
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
