--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -84,7 +84,7 @@
 
             <!-- Previous Year Papers -->
             <div class="mb-12">
-                <h2 class="text-2xl font-bold text-blue-800 mb-6 border-b pb-2">Previous Year Papers</h2>
+                <h2 class="text-2xl font-bold text-blue-800 mb-6 border-b pb-2">Previous Year Paper's</h2>
 
                 <!-- Semester 1 Papers -->
                 <div class="mb-8">
