download linkss addded chem 102

--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -119,10 +119,10 @@
                                 <div class="flex justify-between items-center">
                                 <span class="text-xs text-gray-500">December 2024</span>
                                     <div class="space-x-2">
-                                    <a href="#" target="_blank" class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
+                                    <a href="https://archive.org/details/msc-1st-sem-chemistry-chem-102" target="_blank" class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
                                         View
                                         </a>
-                                    <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
+                                    <a href="https://archive.org/download/msc-1st-sem-chemistry-chem-102/Msc%20%281st%20sem%29%20Chemistry%20CHEM-102.pdf" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
                                             Download
                                         </a>
                             </div>
