Chem 103 links added downlaod

--- a/papers/college/msc-chemistry-sem1.html
+++ b/papers/college/msc-chemistry-sem1.html
@@ -136,10 +136,10 @@
                                 <div class="flex justify-between items-center">
                                 <span class="text-xs text-gray-500">December 2024</span>
                                     <div class="space-x-2">
-                                    <a href="#" target="_blank" class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
+                                    <a href="https://archive.org/details/msc-chem-103-physical-chemistry" target="_blank" class="bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1 rounded">
                                         View
                                         </a>
-                                    <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
+                                    <a href="https://archive.org/download/msc-chem-103-physical-chemistry/Msc%20Chem%20103%20Physical%20Chemistry.pdf" class="bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1 rounded">
                                             Download
                                         </a>
                             </div>
