new changes remove $

--- a/pbc-blog.html
+++ b/pbc-blog.html
@@ -418,12 +418,12 @@
             <div class="method">
                 <div class="method-number">3</div>
                 <h2>Build an Emergency Fund</h2>
-                <p>Life is unpredictable, and unexpected expenses can derail your finances. An emergency fund acts as a financial safety net for situations like medical emergencies, car repairs, or sudden travel needs. Start small – even $500 can make a huge difference.</p>
-                <p>Try to save at least $1,000 to $2,000 over time. Set up automatic transfers from your checking to savings account each month, even if it's just $20-50. You'll be surprised how quickly it adds up!</p>
+                <p>Life is unpredictable, and unexpected expenses can derail your finances. An emergency fund acts as a financial safety net for situations like medical emergencies, car repairs, or sudden travel needs. Start small – even ₹500 can make a huge difference.</p>
+                <p>Try to save at least ₹1,000 to ₹2,000 over time. Set up automatic transfers from your checking to savings account each month, even if it's just ₹20-50. You'll be surprised how quickly it adds up!</p>
                 <div class="tips">
                     <div class="tips-title">Building Your Fund:</div>
                     <ul>
-                        <li>Start with a goal of $500, then work up to $1,000</li>
+                        <li>Start with a goal of ₹500, then work up to ₹1,000</li>
                         <li>Put birthday money and gifts directly into savings</li>
                         <li>Save refunds from textbook returns or unused meal plans</li>
                         <li>Keep emergency funds in a separate, hard-to-access account</li>
